# burn_reconstruction

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  package-lock.json  package.json  playwright.config.mjs
.github/workflows/: build.yml  clippy.yml  deploy-pages.yml
assets/images/re10k/: ATTRIBUTION.md
crates/bevy_reconstruction/: Cargo.toml
crates/bevy_reconstruction/src/: app.rs  lib.rs  main.rs
crates/bevy_reconstruction/src/bevy_file_dialog/: drop.rs  mod.rs  pick.rs
crates/burn_reconstruction/: Cargo.toml  build.rs
crates/burn_reconstruction/src/: backend.rs  bootstrap.rs  build_info.rs  lib.rs  pipeline.rs  utils.rs  wasm_api.rs
crates/burn_reconstruction_zeroverse/: Cargo.toml
crates/burn_reconstruction_zeroverse/src/: adapters.rs  config.rs  error.rs  lib.rs  workflow.rs
crates/burn_yono/: Cargo.toml
crates/burn_yono/src/: correctness.rs  glb.rs  import.rs  inference.rs  lib.rs  parts.rs
crates/burn_yono/src/model/: backbone_croco_style.rs  camera_head.rs  config.rs  encoder.rs  gaussian.rs  mod.rs  ops.rs  patch_embed.rs  transformer_head.rs  yono_head.rs
crates/burn_zipsplat/: Cargo.toml
crates/burn_zipsplat/src/: lib.rs
scripts/: build_web.sh  bundle_model_cdn.sh  bundle_web_assets.sh
src/: backend.rs  bootstrap.rs  lib.rs  pipeline.rs  utils.rs  wasm_api.rs
tests/: parity.rs
tests/playwright/: cdn-cache.spec.mjs  infer.spec.mjs
tool/: bench_pipeline.rs  eval_dino_parity.rs  eval_head_debug_parity.rs  eval_multiview_parity.rs  eval_precision_parity.rs  export_zipsplat_reference.py  import.rs  splat_glb.rs  validate_cdn_bundle.rs
www/: README.md  burn_gaussian_splatting_sw.js  burn_reconstruction_sw.js  index.html  infer.html
