[workspace]
members = [
  "crates/bevy_reconstruction",
  "crates/burn_reconstruction",
  "crates/burn_yono",
  "crates/burn_reconstruction_zeroverse",
]
resolver = "2"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3

[profile.wasm-release]
strip = "symbols"
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
