[package]
name = "burn_yono"
description = "YoNoSplat model pipeline and utilities for Burn"
version = "0.1.0"
edition = "2021"
authors = ["mosure <mitchell@mosure.me>"]
license = "MIT"
repository = "https://github.com/mosure/burn_reconstruction"

[features]
default = ["backend_ndarray"]

backend_cpu = ["burn/cpu", "burn_dino/backend_cpu"]
backend_cuda = ["burn/cuda", "burn_dino/backend_cuda"]
backend_ndarray = ["burn/ndarray", "burn_dino/backend_ndarray"]
wgpu_fusion = ["burn/fusion"]
backend_wgpu = ["burn/wgpu", "burn/webgpu", "burn_dino/backend_wgpu", "wgpu_fusion"]

correctness = ["dep:safetensors"]
import = [
  "burn-store",
  "correctness",
  "dep:serde",
  "dep:serde_json",
  "dep:ciborium",
  "dep:sha2",
]
io = ["dep:image", "dep:serde_json"]

[dependencies]
burn-store = { version = "0.19", optional = true }
burn_dino = { version = "0.7", default-features = false }
ciborium = { version = "0.2", optional = true }
image = { version = "0.25", default-features = true, optional = true }
nalgebra = "0.34"
safetensors = { version = "0.6", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
sha2 = { version = "0.10", optional = true }
thiserror = "2.0"

[dependencies.burn]
version = "0.19"
default-features = false
features = ["std"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
